--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horario ATR</title>
 	<link rel="stylesheet" href="./assets/main.css">
-	<script defer src="./assets/main.js"></script>
+	<script src="./assets/main.js"></script>
 </head>
 <body>
 	<div class="header">
@@ -19,15 +19,12 @@
 		<figure class="expand"><i class="fa fa-close"></i></figure>
 	</header>
 	<article>
-		<div class="article-inner">
-			<ul class="dotless">
-			<li>The</li>
-			<li>Quick</li>
-			<li>Brown</li>
-			<li>Fox</li>
-			<li>Lorem</li>
-			<li>Ipsum</li>
-		</ul>
+		<div class="schedule__inner">
+			<div class="block trail">
+				<span>Trail </span>
+				<span>(Cerro)</span>
+				<span>11 AM</span>
+			</div>
 		</div>
 	</article>
 </div>
