--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 			<div class="block trail">
 				<span>Trail </span>
 				<span>(Cerro)</span>
+				<span>11:00 AM</span>
+			</div>
+			<div class="block trail">
+				<span>Trail </span>
+				<span>(Cerro)</span>
 				<span>17:00 PM</span>
 			</div>
 			<div class="block trail">
@@ -65,6 +70,11 @@
 				<span>Trail </span>
 				<span>(Cerro)</span>
 				<span>10:00 AM</span>
+			</div>
+			<div class="block trail">
+				<span>Trail </span>
+				<span>(Cerro)</span>
+				<span>11:00 AM</span>
 			</div>
 			<div class="block trail">
 				<span>Trail </span>
@@ -137,6 +147,11 @@
 				<span>Trail </span>
 				<span>(Cerro)</span>
 				<span>10:00 AM</span>
+			</div>
+			<div class="block trail">
+				<span>Trail </span>
+				<span>(Cerro)</span>
+				<span>11:00 AM</span>
 			</div>
 			<div class="block trail">
 				<span>Trail </span>
