--- a/index.html
+++ b/index.html
@@ -232,9 +232,16 @@
 		<figure class="expand"><i class="fa fa-close"></i></figure>
 	</header>
 	<article>
-		<div class="article-inner">
-			<p> No hay clases registradas</p>
-		</div>
+		<div class="schedule__inner">
+			 
+			<div class="block acondi-online online">
+				<span>Acondicionamiento Físico</span>
+				<span>(Online)</span>
+				<span>11:00 AM</span>
+			  </div>
+			 
+ 		</div>
+		
 	</article>
 </div>
 <script src="./assets/main.js"></script>
