--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 				<span>(Presencial)</span>
 			</div>
 			<div class="block trail">
-				<span>18:00 AM</span>
+				<span>18:00 PM</span>
 				<span>Trail </span>
 				<span>(Cerro)</span>
 			</div>
